Links a perfil de github arreglados

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <ul class="hero__socials">
               <li>
                 <a
-                  href="https://github.com/nachodaguerre"
+                  href="https://github.com/nachodaguerree"
                   class="hero__social-link"
                   target="_blank"
                   rel="noopener noreferrer"
