--- a/pages/contact.html
+++ b/pages/contact.html
@@ -87,7 +87,7 @@
             <ul class="contact__socials">
               <li>
                 <a
-                  href="https://github.com/nachodaguerre"
+                  href="https://github.com/nachodaguerree"
                   class="contact__social-link"
                   target="_blank"
                   rel="noopener noreferrer"
