Agregar imagen para mejor preview

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <!-- hero box on the right -->
           <div class="hero__right">
             <img
-              src="https://via.placeholder.com/400x400"
+              src="./assets/img/frame_image_images_gallery_photo_picture_icon_258976.png"
               alt="Image of Ignacio Daguerre"
             />
           </div>
