--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../assets/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
     <title>Home - Ignacio Daguerre Portfolio</title>
   </head>
   <body class="body">
