--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <!-- hero box on the right -->
           <div class="hero__right">
             <img
-              src="./assets/img/frame_image_images_gallery_photo_picture_icon_258976.png"
+              src="./assets/img/florian-olivo-4hbJ-eymZ1o-unsplash.jpg"
               alt="Image of Ignacio Daguerre"
             />
           </div>
