--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
       name="description"
       content="Portfolio of Ignacio Daguerre, a Front-End Developer and Computer Technician from Montevideo, Uruguay."
     />
+    <meta
+      name="keywords"
+      content="Portfolio Front-End Developer, Front-End Developer Uruguay, Desarrollador Web Front-End, Proyectos de Desarrollo Web, Portfolio de Programación, Portfolio de Ignacio Daguerre, HTML, CSS, Bootstrap"
+    />
     <meta name="author" content="Ignacio Daguerre Ibarra" />
+    <link rel="icon" href="/assets/img/favicon-32x32.png" type="image/png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
@@ -132,7 +137,7 @@
           <!-- hero box on the right -->
           <div class="hero__right">
             <img
-              src="./assets/img/florian-olivo-4hbJ-eymZ1o-unsplash.jpg"
+              src="./assets/img/florian-olivo-4hbJ-eymZ1o-unsplash.webp"
               alt="Image of Ignacio Daguerre"
             />
           </div>
